src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Annual_Leave__c</fullName>
        <label>Annual Leave from Contract</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_leave_remaining_this_year__c</fullName>
        <formula>Annual_leave_this_year__c -  Annual_leave_used_this_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual leave remaining this year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_leave_this_year__c</fullName>
        <inlineHelpText>Includes any carryover from last year</inlineHelpText>
        <label>Annual leave this year</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_leave_used_this_year__c</fullName>
        <inlineHelpText>Calculated from the time sheets for this year</inlineHelpText>
        <label>Annual leave used this year</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appraisal_Due_Date__c</fullName>
        <label>Mid Year Appraisal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Centre__c</fullName>
        <label>Centre</label>
        <picklist>
            <picklistValues>
                <fullName>ACT - Athlone Community Taskforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALC Gorey,Co Wexford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altrusa VEC, Cork City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An Cosán</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistive Technology, VTOS Tralee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.A.R.P.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.D.V.E.C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.D.V.E.C Colaiste Eoin, Finglas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.Y.T.E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clonmel ALS, South Tipperary VEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coláiste Íde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community College, Listowel,Co Kerry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crumlin VEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DALC,Mountjoy Square,Dublin 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop-in Louth Leadership/Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fealeside STTC, Abbeyfeale, Co. Limerick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fermoy YouthReach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal to Work Ballina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerry VEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilbride Mill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listowel Community College, Co. Kerry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longford ALC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucan Institute of Further Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath VEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mullingar AEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Learning Network, Leitrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Learning Network, Sligo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navan Travellers Education Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newpark Close Family Resource Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NLN , Breaffy Road,Castlebar, Mayo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Hours__c</fullName>
        <label>Contract Hours</label>
        <picklist>
            <picklistValues>
                <fullName>35</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Date__c</fullName>
        <label>Contract Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Permanent Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Term Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Term Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JobBridge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Address__c</fullName>
        <label>Emergency Contact Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Landline__c</fullName>
        <label>Emergency Contact Landline</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Mobile__c</fullName>
        <label>Emergency Contact Mobile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Person__c</fullName>
        <label>Emergency Contact Person</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Off_Probation_Date__c</fullName>
        <label>End Of Probation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Year_Appraisal_Due_Date__c</fullName>
        <label>End of Year Appraisal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Interview_Date__c</fullName>
        <label>Exit Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Interview__c</fullName>
        <label>Exit Interview</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finish_Date__c</fullName>
        <label>Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finish_Date_of_most_recent_contract__c</fullName>
        <label>Finish Date of most recent contract</label>
        <summarizedField>HR_Contracts__c.End_Date__c</summarizedField>
        <summaryForeignKey>HR_Contracts__c.Employee__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flexible_Working_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flexible Working Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Four_Month_Probation_Date__c</fullName>
        <label>Four Month Probation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Induction_Completed__c</fullName>
        <label>Induction Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adminstrative Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Education and Guidance Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance Education Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance Education Telephone Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance Education Tutor Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freephone Co-ordinator and IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Literacy Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrating Literacy Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Support Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Freephone Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Support Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literacies Development Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literacy Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plain English Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student and Membership Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Support Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Learning_Support_Worker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Learning Support Worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Line Manager)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Location__c</fullName>
        <label>Main Location</label>
        <picklist>
            <picklistValues>
                <fullName>Dublin</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Manages</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_contracts__c</fullName>
        <label>Number of contracts</label>
        <summaryForeignKey>HR_Contracts__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PPSN__c</fullName>
        <label>PPSN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_to_call_back__c</fullName>
        <label>Permission to call back</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Employee__c</fullName>
        <label>Relationship to Employee</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Info_Pack__c</fullName>
        <label>Require Info Pack</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Require_Tutor_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Tutor Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retirement_Date__c</fullName>
        <formula>Birthdate + 23741</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_To_Work_Date__c</fullName>
        <label>Return To Work Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <label>Scale</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>VEC Scale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority Salary Scales Operative Grade 4 Point 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority Salary Scales Operative Grade 4 Point 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority Salary Scales Operative Grade 4 Point 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority Salary Scales Operative Grade 5 Point 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority Salary Scales Operative Grade 5 Point 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority Salary Scales Operative Grade 5 Point 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Service Grade Principal Point 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Service Grade Assistant Principal Standard Point 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Service Grade Clerical Officer Standard Scale Point 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Service Grade Administrative Officer Standard Scale Point 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Service Grade Administrative Officer Standard Scale Point 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Service Grade Administrative Officer Standard Scale Point 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Service Grade Administrative Officer Standard Scale Point 10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_Employee__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date contract started</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Adoptive Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tutor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tutor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Two_Month_Probation_Date__c</fullName>
        <label>Two Month Probation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Working_Pattern__c</fullName>
        <label>Working Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>Jobshare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday, Tuesday, Friday 9:30 -17:30, Wednesday -Thursday 8:00 - 16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday - Friday 9:00 - 16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday - Friday 9:30 - 17:00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Monday - Thursday (Variable hours)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday - Thursday 9:30 - 17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday - Thursday 9:30 -17:00(+ 2 Hours),Friday 9:30 - 15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three Days Over Monday to Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday - Thursday 10:00 - 16:50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutor/LSW Working Pattern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <description>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Last_Donation_Date__c</fullName>
        <description>Formula:  The Last Donation Date of the Account where this Contact is the One to One Contact.   This has been superseded by the &apos;Last Gift Date&apos; field in the Households package.</description>
        <formula>if( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LastDonationDate__c,
null
)</formula>
        <inlineHelpText>WARNING - This field may not accurately reflect the donation history. Please use the Last Gift Date field instead.</inlineHelpText>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Lifetime_Giving_History_Amount__c</fullName>
        <description>Formula:  The Lifetime Donation Amount of the Account where this Contact is the One to One Contact.  This field has been superseded by the &apos;Total Amount&apos; field in the Households package.</description>
        <formula>IF( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LifetimeDonationHistory_Amount__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>WARNING- This field may not accurately reflect donation histories. Please use the Total Amount field on the Contact record instead.</inlineHelpText>
        <label>Lifetime Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <label>Primary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this Contact from One to One or Bucket account processing.</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <label>Secondary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <description>Hidden system field: do not change.  Updated by automatic processes.  See Contacts &amp; Organization settings.</description>
        <label>_SYSTEM: ACCOUNT PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>One-to-One</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated field.  Do not use.</description>
        <inlineHelpText>This field is no longer used and should not be referenced. It has been replaced by Type_of_Account__c</inlineHelpText>
        <label>_SYSTEM: IsIndividual - DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <description>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</description>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the type of Account this Contact is connected to.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__WorkPhone__c</fullName>
        <description>See &apos;Preferred Phone&apos; field.</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npe01__Work_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Work&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Work&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
</CustomObject>